# ceethane

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md
examples/: all_levels.rs  basic.rs  err.rs  fake_web_app.rs
src/: lib.rs  macros.rs
src/backend/: cee_syslog.rs  mod.rs  stderr.rs  stdout.rs
src/logger/: mod.rs
